--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: center;
     margin: 0;
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
-    background: linear-gradient(360deg, #461847, #3e6992);
-    height: 100vh;
+    background-color: rgb(33, 33, 39);
 }
 
 .input-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 5em;
     font-weight: bold;
-    height: 75px;
+    height: fit-content;
     width: 1000px;
     border-radius: 15px;
-    gap: 1em;
-    background: linear-gradient(#1f193a, #0a0814);
+    background-color: #292b40;
     box-shadow: 5px 5px 5px rgb(0, 0, 0, .25);
 }
 
@@ -29,6 +29,7 @@ body {
     text-align: center;
     border: none;
     width: 120px;
+    margin: 1em;
     line-height: 20px;
     border-radius: 10px;
     text-transform: uppercase;
@@ -54,10 +55,8 @@ body {
 .main-data-container {
     display: flex;
     gap: 1em;
-    justify-content: space-around;
+    align-items: center;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 1em;
     width: 1000px;
 }
@@ -74,13 +73,14 @@ body {
 .CI-right-container,
 .CI-left-container {
     width: 50%;
+    height: 350px;
     border-radius: 15px;
     padding-top: 1em;
     padding-left: 3em;
     padding-bottom: 2em;
     padding-right: 3em;
     box-shadow: 5px 5px 5px rgb(0, 0, 0, .25);
-    background: linear-gradient(#1f193a, #0a0814);
+    background-color: #292b40;
 }
 
 .header-text {
@@ -177,4 +177,58 @@ input:checked+.slider:before {
 
 .slider.round:before {
     border-radius: 50%;
+}
+
+@media only screen and (max-width: 1020px) {
+    .input-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        height: 125px;
+        width: 600px;
+    }
+    .main-data-container {
+        flex-direction: column;
+        margin-bottom: 2em;
+    }
+    .CI-right-container,
+    .CI-left-container {
+        height: fit-content;
+    }
+}
+
+@media only screen and (max-width: 620px) {
+    .input-container {
+        width: 350px;
+        height: 200px;
+    }
+    .CI-left-container,
+    .CI-right-container {
+        width: 350px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .box-container {
+        font-size: 0.9em;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+@media only screen and (max-width: 349px) {
+    .input-container {
+        width: 325px;
+        height: 200px;
+    }
+    .CI-left-container,
+    .CI-right-container {
+        width: 325px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .box-container {
+        font-size: small;
+        white-space: nowrap;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
 }
